--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -104,3 +104,12 @@ body {
 .dice-rolling {
   animation: roll 0.5s linear infinite;
 }
+
+.shadow-glow {
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1), 0 0 5px 5px rgba(0, 255, 0, 0.5); /* Adjust colors and opacity as needed */
+  transition: box-shadow 0.3s ease;
+}
+
+.shadow-glow:hover {
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1), 0 0 10px 10px rgba(0, 255, 0, 0.7); /* Adjust colors and opacity as needed */
+}
